--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,10 +16,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="96dp"
-            android:autofillHints="@string/prompt_email"
-            android:hint="@string/prompt_email"
+            android:autofillHints="@string/prompt_id"
+            android:hint="@string/prompt_id"
             android:text="hi"
-            android:inputType="textEmailAddress"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,11 +65,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="hi"
-            android:autofillHints="@string/prompt_password"
-            android:hint="@string/prompt_password"
+            android:autofillHints="@string/prompt_realname"
+            android:hint="@string/prompt_realname"
             android:imeActionLabel="@string/action_sign_in_short"
             android:imeOptions="actionDone"
-            android:inputType="textPassword"
             android:selectAllOnFocus="true"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
@@ -83,8 +81,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:autofillHints="@string/prompt_password"
-            android:hint="@string/prompt_password"
+            android:autofillHints="@string/prompt_phone"
+            android:hint="@string/prompt_phone"
             android:imeActionLabel="@string/action_sign_in_short"
             android:imeOptions="actionDone"
             android:inputType="phone"
@@ -100,7 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="100dp"
             android:layout_marginBottom="64dp"
             android:enabled="true"
             android:text="@string/action_sign_in"
@@ -110,7 +108,7 @@
             app:layout_constraintTop_toBottomOf="@+id/password"
             app:layout_constraintVertical_bias="0.2" />
 
-    <ProgressBar
+    <!--<ProgressBar
             android:id="@+id/loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -122,6 +120,6 @@
             app:layout_constraintEnd_toEndOf="@+id/password"
             app:layout_constraintStart_toStartOf="@+id/password"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.3" />
+            app:layout_constraintVertical_bias="0.3" /> -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
