--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,7 @@
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="@dimen/fab_margin"
             android:layout_marginBottom="16dp"
+            android:backgroundTint="#757575"
             app:srcCompat="@drawable/ic_button_pin" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
