--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -15,7 +15,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="#757575"
+                android:background="@color/white"
                 app:popupTheme="@style/Theme.SafeShare.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
