--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/nav_rescue"
-        android:name="com.toygoon.safeshare.ui.slideshow.SlideshowFragment"
+        android:name="com.toygoon.safeshare.ui.rescue.RescueFragment"
         android:label="@string/menu_rescue"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_rescue" />
 </navigation>
