--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,20 +21,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:backgroundTint="@color/white"
             app:backgroundTint="@color/white"
-            app:layout_constraintStart_toEndOf="@id/fab"
+            app:layout_constraintStart_toEndOf="@id/button_pin"
             app:srcCompat="@drawable/ic_button_sos"
             app:tint="@null" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/button_pin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="@dimen/fab_margin"
             android:layout_marginBottom="16dp"
-            android:backgroundTint="@color/white"
             app:backgroundTint="@color/white"
             app:srcCompat="@drawable/ic_button_pin"
             app:tint="@null" />
