--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,14 +11,30 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context=".ui.login.LoginActivity">
 
+    <TextView
+            android:id="@+id/header_text"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:text="@string/action_sign_in"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:textColor="@color/green_700"
+            android:layout_marginTop="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
             android:id="@+id/username"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="96dp"
-            android:autofillHints="@string/prompt_id"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="300dp"
+            android:text="aaa"
+            android:background="@drawable/box_border"
+            android:textColor="@color/black"
+            android:paddingLeft="20dp"
+            android:elevation="10dp"
             android:hint="@string/prompt_id"
-            android:text="hi"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,11 +42,14 @@
 
     <EditText
             android:id="@+id/password"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="hi"
-            android:autofillHints="@string/prompt_password"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/box_border"
+            android:textColor="@color/black"
+            android:text="aaa"
+            android:paddingLeft="20dp"
+            android:elevation="10dp"
             android:hint="@string/prompt_password"
             android:imeActionLabel="@string/action_sign_in_short"
             android:imeOptions="actionDone"
@@ -43,17 +62,19 @@
 
     <EditText
             android:id="@+id/password2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="hi"
-            android:autofillHints="@string/prompt_password"
-            android:hint="@string/prompt_password"
-            android:imeActionLabel="@string/action_sign_in_short"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/box_border"
+            android:textColor="@color/black"
+            android:paddingLeft="20dp"
+            android:elevation="10dp"
+            android:visibility="gone"
+            android:hint="@string/prompt_password2"
+            android:imeActionLabel="@string/prompt_password2"
             android:imeOptions="actionDone"
             android:inputType="textPassword"
             android:selectAllOnFocus="true"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password" />
@@ -61,16 +82,19 @@
 
     <EditText
             android:id="@+id/realname"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="hi"
-            android:autofillHints="@string/prompt_realname"
-            android:hint="@string/prompt_realname"
-            android:imeActionLabel="@string/action_sign_in_short"
-            android:imeOptions="actionDone"
-            android:selectAllOnFocus="true"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/box_border"
+            android:textColor="@color/black"
             android:visibility="gone"
+            android:paddingLeft="20dp"
+            android:elevation="10dp"
+            android:hint="@string/prompt_realname"
+            android:imeActionLabel="@string/prompt_realname"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password2" />
@@ -78,16 +102,19 @@
 
     <EditText
             android:id="@+id/phone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:autofillHints="@string/prompt_phone"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/box_border"
+            android:textColor="@color/black"
+            android:visibility="gone"
+            android:paddingLeft="20dp"
+            android:elevation="10dp"
             android:hint="@string/prompt_phone"
-            android:imeActionLabel="@string/action_sign_in_short"
+            android:imeActionLabel="@string/prompt_phone"
             android:imeOptions="actionDone"
             android:inputType="phone"
             android:selectAllOnFocus="true"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/realname" />
@@ -107,19 +134,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password"
             app:layout_constraintVertical_bias="0.2" />
-
-    <!--<ProgressBar
-            android:id="@+id/loading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="64dp"
-            android:layout_marginBottom="64dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/password"
-            app:layout_constraintStart_toStartOf="@+id/password"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.3" /> -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
