--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,17 +2,16 @@
     <!-- Base application theme. -->
     <style name="Theme.SafeShare" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/pink_400</item>
-        <item name="colorPrimaryVariant">@color/pink_600</item>
+        <item name="colorPrimary">@color/green_500</item>
+        <item name="colorPrimaryVariant">@color/green_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/pink_400</item>
-        <item name="colorSecondaryVariant">@color/pink_600</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-        <item name="android:forceDarkAllowed">false</item>
+        <item name="android:textColorPrimary">@color/white</item>
     </style>
 
     <style name="Theme.SafeShare.NoActionBar">
@@ -20,7 +19,6 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.SafeShare.AppBarOverlay" parent="Theme.MaterialComponents.Light.NoActionBar" />
-
+    <style name="Theme.SafeShare.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar"/>
     <style name="Theme.SafeShare.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
