--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="#FCE4EC"
+    android:background="@color/green_200"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -22,7 +22,6 @@
             android:id="@+id/nav_pic"
             android:layout_width="70dp"
             android:layout_height="match_parent"
-            android:background="@drawable/circle_shape"
             android:contentDescription="@string/nav_header_desc"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:paddingBottom="@dimen/nav_header_vertical_spacing"
@@ -44,12 +43,12 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#880E4F" />
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/nav_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nav_header_subtitle"
-        android:textColor="#880E4F" />
+        android:textColor="@color/white" />
 </LinearLayout>
