--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="@color/green_200"
             app:layout_constraintStart_toEndOf="@id/button_pin"
             app:srcCompat="@drawable/ic_button_sos"
             app:tint="@null" />
@@ -33,7 +33,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="@dimen/fab_margin"
             android:layout_marginBottom="16dp"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="@color/green_200"
             app:srcCompat="@drawable/ic_button_pin"
             app:tint="@null" />
     </androidx.appcompat.widget.LinearLayoutCompat>
